Fix issues
- remove wildcard import, comment in properties file
- moved logic from entity to service
- simplified the LocationOutOfStockException class