@@ -1,11 +1,14 @@
 package ro.msg.learning.shop.service;
 
+import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ro.msg.learning.shop.dto.AddressDTO;
+import ro.msg.learning.shop.exception.LocationOutOfStockException;
 import ro.msg.learning.shop.mapper.AddressMapper;
 import ro.msg.learning.shop.model.Customer;
+import ro.msg.learning.shop.model.Location;
 import ro.msg.learning.shop.model.Order;
 import ro.msg.learning.shop.model.Product;
 import ro.msg.learning.shop.repository.LocationRepository;
@@ -48,12 +51,12 @@ public class OrderService {
                         .product(idToProduct.get(entry.getKey()))
                         .quantity(entry.getValue())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         final var orderDetails = locationSelectionAlgorithm.selectLocationForItems(items);
 
         orderDetails.forEach(orderItem -> {
-            orderItem.getShippedFrom().removeProductFromStock(orderItem.getProduct(), orderItem.getQuantity());
+            removeProductFromStock(orderItem.getShippedFrom(), orderItem.getProduct(), orderItem.getQuantity());
             locationRepository.save(orderItem.getShippedFrom());
         });
 
@@ -68,5 +71,24 @@ public class OrderService {
 
     public Collection<Order> findAllOrders() {
         return orderRepository.findAll();
+    }
+
+    private void removeProductFromStock(@NonNull Location location, @NonNull Product product, @NonNull Integer quantity) {
+        if (quantity < 1) {
+            throw new IllegalArgumentException("quantity must be positive");
+        }
+
+        final var stock = location.getStocks().stream()
+                .filter(s -> s.getProduct().equals(product) && s.getQuantity() >= quantity)
+                .findFirst()
+                .orElseThrow(() -> new LocationOutOfStockException("Location \"" + location.getId()
+                        + "\" does not have in stock product \"" + product.getId()
+                        + "\" with quantity " + quantity));
+
+        if (stock.getQuantity() > quantity) {
+            stock.setQuantity(stock.getQuantity() - quantity);
+        } else {
+            location.getStocks().remove(stock);
+        }
     }
 }
